# Project-Genesis

./: README.md  genesis_engine.py  pyproject.toml  requirements.txt  run_server.py
Docs/: The Universal Recursion Principle (URP) _260312_170343.txt
benchmarks/: bench_field_step.py
project_genesis/: __init__.py  agent.py  chunk_manager.py  config.py  engine.py  io.py  memory_corpus.py  metrics.py  network_server.py  numba_kernels.py  render.py  s_compass_bridge.py  visualize.py
project_genesis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_genesis_engine.py  test_memory_corpus.py  test_new_subsystems.py  test_urp_extensions.py
web_viewer/: client.js  index.html
